# cyber-econ

./: README.md  docker-compose.yml  package-lock.json
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/core/: database.py
backend/app/models/: schemas.py
backend/app/routers/: assets.py
backend/app/services/: nmap_scanner.py  pdf_report_service.py  remediation_service.py  risk_calculator.py
frontend/: package-lock.json  package.json
frontend/src/: types.ts
frontend/src/components/: AssetForm.tsx  RemediationPanel.tsx  RiskCard.tsx  RiskGraph.tsx
frontend/src/pages/: Dashboard.tsx
frontend/src/services/: api.ts
specs/: api_contract.md  risk_logic.md  system_architecture.md
